<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher">
    <!-- UI -->
    <PreferenceCategory android:title="@string/preferences_interface_title">
        <!-- Homescreen -->
        <PreferenceScreen android:key="ui_homescreen"
            android:title="@string/preferences_interface_homescreen_title">
            <PreferenceCategory android:title="@string/preferences_interface_homescreen_general_category">
                <com.android.launcher2.preference.NumberPickerPreference android:key="ui_homescreen_screens"
                    android:title="@string/preferences_interface_homescreen_general_screens_title"
                    android:summary="@string/preferences_interface_homescreen_general_screens_summary"
                    android:defaultValue="5"
                    launcher:max="7"
                    launcher:min="1" />
                <com.android.launcher2.preference.NumberPickerPreference android:key="ui_homescreen_default_screen"
                    android:title="@string/preferences_interface_homescreen_general_default_screen_title"
                    android:summary="@string/preferences_interface_homescreen_general_default_screen_summary"
                    android:defaultValue="3"
                    launcher:maxExternal="ui_homescreen_screens"
                    launcher:max="7"
                    launcher:min="1" />
                <CheckBoxPreference android:key="ui_general_orientation"
                    android:title="@string/preferences_interface_homescreen_general_orientation_title"
                    android:summary="@string/preferences_interface_homescreen_general_orientation_summary" />
                <CheckBoxPreference android:key="ui_homescreen_general_search"
                    android:title="@string/preferences_interface_homescreen_general_search_title"
                    android:summary="@string/preferences_interface_homescreen_general_search_summary"
                    android:defaultValue="true" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preferences_interface_homescreen_scrolling_category">
                <ListPreference android:key="ui_homescreen_scrolling_transition_effect"
                    android:title="@string/preferences_interface_homescreen_scrolling_transition_effect_title"
                    android:summary="@string/preferences_interface_homescreen_scrolling_transition_effect_summary"
                    android:entries="@array/preferences_interface_homescreen_scrolling_transition_effect_entries"
                    android:entryValues="@array/preferences_interface_homescreen_scrolling_transition_effect_values"
                    android:defaultValue="@string/config_workspaceDefaultTransitionEffect" />
                <CheckBoxPreference android:key="ui_homescreen_scrolling_fade_adjacent_screens"
                    android:title="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_title"
                    android:summary="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_summary"
                    android:defaultValue="@bool/config_workspaceDefualtFadeInAdjacentScreens" />
                <CheckBoxPreference android:key="ui_dock_indicator_background"
                    android:title="@string/preferences_interface_dock_indicator_background_title"
                    android:summary="@string/preferences_interface_dock_indicator_background_summary"
                    android:defaultValue="true" />
            </PreferenceCategory>
        </PreferenceScreen>

        <!-- Drawer -->
        <PreferenceScreen android:key="ui_drawer"
            android:title="@string/preferences_interface_drawer_title">
            <PreferenceCategory android:title="@string/preferences_interface_drawer_scrolling_category">
                <ListPreference android:key="ui_drawer_scrolling_transition_effect"
                    android:title="@string/preferences_interface_drawer_scrolling_transition_effect_title"
                    android:summary="@string/preferences_interface_drawer_scrolling_transition_effect_summary"
                    android:entries="@array/preferences_interface_drawer_scrolling_transition_effect_entries"
                    android:entryValues="@array/preferences_interface_drawer_scrolling_transition_effect_values"
                    android:defaultValue="@string/config_drawerDefaultTransitionEffect" />
                <CheckBoxPreference android:key="ui_drawer_scrolling_fade_adjacent_screens"
                    android:title="@string/preferences_interface_drawer_scrolling_fade_adjacent_screens_title"
                    android:summary="@string/preferences_interface_drawer_scrolling_fade_adjacent_screens_summary" />
            </PreferenceCategory>
        </PreferenceScreen>

        <!-- Dock -->
        <!--PreferenceScreen android:key="ui_dock"
            android:title="@string/preferences_interface_dock_title">

        </PreferenceScreen-->

        <!-- Icons -->
        <!--PreferenceScreen android:key="ui_icons"
            android:title="@string/preferences_interface_icons_title">

        </PreferenceScreen-->
    </PreferenceCategory>

</PreferenceScreen>
